--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   ></script>
   <!-- Bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-  <!-- JS Code -->
-  <script src="./index.js"></script>
+  <!-- JS Code, tenemos que especificar 'type="module"', por que en este archivo vamos a importar otros archivos-->
+  <script src="./js/index.js" type="module"></script>
 </body>
 </html>
