--- a/index.html
+++ b/index.html
@@ -66,26 +66,15 @@
 
   <!-- Modal -->
   
-  <!-- <div
-    class="modal fade"
-    id="modal"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true"
-  >
+  <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">
             Edit Todo
           </h5>
-          <button
-            type="button"
-            class="close"
-            data-dismiss="modal"
-            aria-label="Close"
-          >
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -96,26 +85,18 @@
           <form>
             <div class="form-group">
               <label>Title</label>
-              <input
-                id="modal-title"
-                type="text"
-                class="form-control"
-                placeholder="Do Something"
-              />
+              <input id="modal-title" type="text" class="form-control" placeholder="Do Something" />
             </div>
             <div class="form-group">
               <label>Description</label>
               <textarea class="form-control" id="modal-description" rows="3">
-
-              </textarea>
+  
+                </textarea>
             </div>
             <div class="form-group d-inline-flex">
               <label>Completed</label>
               <div class="mt-1 ml-2">
-                <input
-                id="modal-completed"
-                type="checkbox"
-              />
+                <input id="modal-completed" type="checkbox" />
               </div>
             </div>
           </form>
@@ -130,7 +111,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <main>
     <div class="container pt-3">
@@ -187,25 +168,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>
-                Learn JS
-              </td>
-              <td>
-                Watch Javascript tutorials on Youtube
-              </td>
-              <td class="text-center">
-                <input type="checkbox">
-              </td>
-              <td class="text-right">
-                <button class="btn btn-primary mb-1">
-                  <i class="fa fa-pencil"></i>
-                </button>
-                <button class="btn btn-danger mb-1 ml-1">
-                  <i class="fa fa-trash"></i>
-                </button>
-              </td>
-            </tr>
+            Content generated with JS
           </tbody>
         </table>
       </div>
